--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,82 +1,78 @@
-name: terraform cicd pipeline
+name: Terraform Plan with OPA Evaluation
 
 on:
   push:
     branches:
       - main
-      - dev
-      - '*'
-  workflow_dispatch:
+  workflow_dispatch: # Allow manual triggering for both apply and destroy
 
 jobs:
-  terraform:
-    runs-on: ubuntu-latest 
-    if: "!contains(github.event.head_commit.message, 'destroy')"  # Prevent this job from running if 'destroy' is in the commit message
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-          aws-region: us-east-2   
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1.4.0
-        with:
-          terraform_version: 1.6.0
-
-      - name: Install OPA
-        run: |
-          curl -L -o opa https://github.com/open-policy-agent/opa/releases/download/v0.46.0/opa_linux_amd64
-          chmod +x opa
-          sudo mv opa /usr/local/bin/opa
-          sudo ln -s /usr/local/bin/opa /usr/bin/opa   # Create a symlink in /usr/bin to ensure it's in the default PATH
-          # Check if OPA is installed correctly
-          which opa || echo "OPA not found"
-          echo "PATH is: $PATH"
-
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform
-
-      - name: Terraform fmt   
-        run: terraform fmt
-        working-directory: ./terraform
-
-      - name: Terraform validate
-        run: terraform validate
-        working-directory: ./terraform
-
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
-        working-directory: ./terraform
-
-      - name: Output Terraform Plan 
-        run: terraform show tfplan
-        working-directory: ./terraform
-
-      - name: Upload Terraform Plan
-        uses: actions/upload-artifact@v3
-        with:
-          name: tfplan
-          path: ./terraform/tfplan
-
-      - name: OPA Policy Evaluation
-        run: |
-          # Ensure OPA is in the path before running eval
-          echo "Verifying OPA installation..."
-          which opa
-          /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
-          --input ./terraform/tfplan "data.opa.deny"
-
-  apply:
-    needs: terraform
+  run_terraform_opa_check:
     runs-on: ubuntu-latest
+    steps:
+    # Step 1: Checkout the repository
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
+    # Step 2: Set up Terraform
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1.4.0
+      with:
+        terraform_version: 1.6.0
+
+    # Step 3: Install OPA (Open Policy Agent)
+    - name: Install OPA
+      run: |
+        # Clear any previous OPA installations
+        sudo rm -f /usr/local/bin/opa
+
+        # Download OPA binary
+        curl -L -o opa https://github.com/open-policy-agent/opa/releases/download/v0.46.0/opa_linux_amd64
+
+        # Make it executable
+        chmod +x opa
+
+        # Move it to the appropriate location
+        sudo mv opa /usr/local/bin/opa
+
+        # Verify OPA installation
+        which opa || echo "OPA not found"
+
+        # Check if OPA is functioning by running the version
+        opa version || echo "OPA not installed properly"
+
+    # Step 4: Download Terraform Plan artifact
+    - name: Download Terraform Plan artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: tfplan
+        path: ./terraform/
+
+    # Step 5: Verify the downloaded Terraform plan
+    - name: Verify downloaded Terraform plan
+      run: |
+        ls -l ./terraform/tfplan
+        echo "Checking the plan file..."
+
+    # Step 6: Convert Terraform plan to JSON format
+    - name: Convert Terraform plan to JSON
+      run: |
+        terraform show -json ./terraform/tfplan > ./terraform/plan.json
+        ls -l ./terraform/plan.json
+
+    # Step 7: Evaluate Terraform plan with OPA policies
+    - name: Evaluate Terraform plan with OPA policies
+      run: |
+        # Ensure OPA is in the path before running eval
+        echo "Evaluating Terraform plan with OPA..."
+        
+        # Run the OPA eval against the Terraform plan
+        opa eval --format pretty --data ./terraform/policies/opa.rego ./terraform/plan.json
+
+  # Apply Job
+  apply:
+    needs: run_terraform_opa_check
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -104,13 +100,13 @@ jobs:
         working-directory: ./terraform
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve ./terraform/tfplan
         working-directory: ./terraform
 
+  # Destroy Job
   destroy:
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, 'destroy') || github.event_name == 'workflow_dispatch'  # Run this job if 'destroy' is in the commit message or manually triggered
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
